--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyC5Y-Ldd7YB_vH0dxP7ZymoJ0flq9eCDV4",
+  authDomain: "ma-quee.firebaseapp.com",
+  projectId: "ma-quee",
+  storageBucket: "ma-quee.appspot.com",
+  messagingSenderId: "498609658902",
+  appId: "1:498609658902:web:a576f25ab18b706c8f2937"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
